# telegram_ha_bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
migrations/: 20260109120000_init.sql  20260109120001_add_table_rooms.sql  20260109120002_add_table_devices.sql  20260115140000_add_hide_column.sql  20260216140000_add_archived_column.sql
src/: config.rs  main.rs  models.rs  options.rs
src/bot/: handlers.rs  keyboards.rs  mod.rs  models.rs  notification.rs  router.rs  utils.rs  view.rs
src/bot/screens/: common.rs  home.rs  mod.rs  room.rs  rooms.rs
src/bot/screens/admin/: list_actions.rs  mod.rs
src/bot/screens/control/: climate_view.rs  device_control.rs  device_detail.rs  mod.rs  sensor_view.rs
src/bot/screens/settings/: device_settings.rs  mod.rs
src/charts/: mod.rs
src/core/: devices.rs  maintenance.rs  mod.rs  notification.rs  notifications.rs  presentation.rs  types.rs
src/db/: device_event_log.rs  devices.rs  mod.rs  models.rs  rooms.rs  subscriptions.rs  user.rs
src/ha/: client.rs  event_listener.rs  mod.rs  models.rs  templates.rs
