[package]
name = "telegram_ha_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7"
anyhow = "1.0"
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
urlencoding = "2.1.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
futures-util = "0.3.31"
tungstenite = "0.28.0"
plotters = { version = "0.3.5", features = ["ttf", "bitmap_backend", "chrono"] }
image = "0.25.9"