[package]
name = "telegram_ha_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7"
anyhow = "1.0"
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "macros"] }
futures-util = "0.3.31"
tungstenite = "0.28.0"
plotters = { version = "0.3.5", features = ["ttf", "bitmap_backend", "chrono"] }
image = "0.25.9"
dashmap = "7.0.0-rc2"
async-trait = "0.1.89"
postcard = { version = "1.0", features = ["alloc"] }
base64 = "0.22"

[profile.release]
opt-level = 'z'     # Оптимизация по размеру
lto = true          # Link Time Optimization (удаляет неиспользуемый код)
codegen-units = 1   # Позволяет LTO работать лучше
panic = 'abort'     # Удаляет развертывание стека (уменьшает размер)
strip = true        # Автоматически удаляет отладочную информацию